# cmake_builder

./: .gitignore  README.md  __init__.py  cpp_project.py  load_config.py  utility.py
CMBuilder/: Types.py  cmake.py  cmake_builder.py  default_gitignore.py  default_struct.py  project.py  utility.py
project_test/: CMakeLists.txt  README.md
project_test/src/: CMakeLists.txt
project_test/src/functions/: my_header.h  my_source.cpp
project_test/tests/: CMakeLists.txt
